Allow ocaml profiling
git-svn-id: https://svn.macports.org/repository/macports/trunk@72078 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/ocaml/Portfile
+++ b/dports/lang/ocaml/Portfile
@@ -49,6 +49,10 @@ post-destroot {
 }
 
 # Variants.
+variant profile description {Enable profiling} {
+	configure.env-append CC="gcc -pg"
+}
+
 variant labltk description {Include TK bindings and ocamlbrowser} {
 	depends_lib		lib:tcl8.4:tcl lib:tk8.4:tk
 	configure.args-delete 	-no-tk
