binutils: fix formatting of notes
git-svn-id: https://svn.macports.org/repository/macports/trunk@72084 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/binutils/Portfile
+++ b/dports/devel/binutils/Portfile
@@ -42,5 +42,5 @@ post-extract {
 	system "rm -rf ${worksrcpath}/etc"
 }
 
-notes				Having ${name} installed will cause some other ports to \
-					fail to build. Consider uninstalling ${name}.
+notes "Having ${name} installed will cause some other ports to
+fail to build. Consider uninstalling ${name}."
