glib2: update to 2.26.0; see #26655
git-svn-id: https://svn.macports.org/repository/macports/trunk@72085 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/glib2/Portfile
+++ b/dports/devel/glib2/Portfile
@@ -7,7 +7,7 @@ PortGroup                   archcheck 1.0
 name                        glib2
 conflicts                   glib2-devel
 set my_name                 glib
-version                     2.24.2
+version                     2.26.0
 set branch                  [join [lrange [split ${version} .] 0 1] .]
 categories                  devel
 maintainers                 ryandesign
@@ -28,13 +28,13 @@ long_description            Glib is a library which includes support routines \
 master_sites                gnome:sources/${my_name}/${branch}/ \
                             ftp://ftp.gtk.org/pub/${my_name}/${branch}/
 
-checksums                   md5     8a6e45d7840460ed84288ebfd75782d4 \
-                            sha1    882350c31af929cd4e78ee6aad46108748240e78 \
-                            rmd160  259d2d0a92b1a01bb624a2b759d0f82eefc227ea
+checksums                   md5     9b7dc61f5e389e1cff277a6350c37397 \
+                            sha1    9d7e9dce2add3fadc35079ad291a94f45ebcf706 \
+                            rmd160  176441944f24c274398903ae1816eecfe2cff36b
 
 # ${prefix}/include/glib-2.0/glib/gi18n.h requires -I${prefix}/include to find libintl.h
 # See http://trac.macports.org/changeset/27148
-patchfiles                  patch-configure.in.diff \
+patchfiles                  patch-configure.ac.diff \
                             patch-glib-2.0.pc.in.diff \
                             patch-glib_gunicollate.c.diff \
                             patch-gi18n.h.diff \
@@ -51,6 +51,7 @@ depends_lib                 port:gettext \
 archcheck.files             lib/libintl.dylib \
                             lib/libiconv.dylib \
                             lib/libz.dylib
+
 use_autoconf                yes
 
 # -lresolv is needed at least on Tiger PPC.
