cross ports: delete lib/$arch/libiberty.a as well as lib/libiberty.a
git-svn-id: https://svn.macports.org/repository/macports/trunk@72086 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/cross/arm-none-linux-gnueabi-binutils/Portfile
+++ b/dports/cross/arm-none-linux-gnueabi-binutils/Portfile
@@ -126,7 +126,9 @@ patch {
 
 post-destroot {
 	# Installing (host) libiberty was a mistake.
-	file delete "${destroot}${prefix}/lib/libiberty.a"
+	foreach f [glob -directory "${destroot}${prefix}/lib" libiberty.a */libiberty.a] {
+        file delete $f
+    }
 }
 
 livecheck.type	freshmeat
