--- a/dports/cross/avr-binutils/Portfile
+++ b/dports/cross/avr-binutils/Portfile
@@ -142,11 +142,8 @@ post-patch {
 
 post-destroot {
 	# Installing (host) libiberty was a mistake.
-    if { [ file exists "${destroot}${prefix}/lib/libiberty.a" ] } {
-	    file delete "${destroot}${prefix}/lib/libiberty.a"
-	}
-    if { [ file exists "${destroot}${prefix}/lib/x86_64/libiberty.a" ] } {
-	    file delete "${destroot}${prefix}/lib/x86_64/libiberty.a"
-	}
+    foreach f [glob -directory "${destroot}${prefix}/lib" libiberty.a */libiberty.a] {
+        file delete $f
+    }
 }
 
