--- a/dports/cross/i386-mingw32-binutils/Portfile
+++ b/dports/cross/i386-mingw32-binutils/Portfile
@@ -126,6 +126,7 @@ post-patch {
 destroot.violate_mtree	yes
 post-destroot {
 	# Installing (host) libiberty was a mistake.
-	file delete ${destroot}${prefix}/lib/libiberty.a
-	file delete ${destroot}${prefix}/lib/${build_arch}/libiberty.a
+	foreach f [glob -directory "${destroot}${prefix}/lib" libiberty.a */libiberty.a] {
+        file delete $f
+    }
 }
