--- a/dports/cross/mipsel-linux-binutils/Portfile
+++ b/dports/cross/mipsel-linux-binutils/Portfile
@@ -48,6 +48,8 @@ if {${os.platform} == "darwin"} {
 destroot.violate_mtree yes
 
 post-destroot {
-	file delete -force ${destroot}${cprefix}/lib/libiberty.a \
-		${destroot}${cprefix}/info ${destroot}${cprefix}/man
+	file delete -force ${destroot}${cprefix}/info ${destroot}${cprefix}/man
+	foreach f [glob -directory "${destroot}${cprefix}/lib" libiberty.a */libiberty.a] {
+        file delete $f
+    }
 }
