--- a/dports/cross/i960-rtems-gcc/Portfile
+++ b/dports/cross/i960-rtems-gcc/Portfile
@@ -186,7 +186,9 @@ post-destroot {
 	file delete -force "${destroot}${prefix}/share/man/man7"
 
 	# (host) libiberty
-	file delete "${destroot}${prefix}/lib/libiberty.a"
+	foreach f [glob -directory "${destroot}${prefix}/lib" libiberty.a */libiberty.a] {
+        file delete $f
+    }
 
 	# aliases for charsets (should already be there)
 	file delete "${destroot}${prefix}/lib/charset.alias"
