--- a/dports/cross/mips-rtems-binutils/Portfile
+++ b/dports/cross/mips-rtems-binutils/Portfile
@@ -141,7 +141,9 @@ post-patch {
 
 post-destroot {
 	# Installing (host) libiberty was a mistake.
-	file delete "${destroot}${prefix}/lib/libiberty.a"
+	foreach f [glob -directory "${destroot}${prefix}/lib" libiberty.a */libiberty.a] {
+        file delete $f
+    }
 }
 
 livecheck.type	freshmeat
