updated xbase to 3.1.2 according to sourceforge bugs ID 1889018 and 1889012, disabled locking
git-svn-id: https://svn.macports.org/repository/macports/trunk@72088 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/xbase/Portfile
+++ b/dports/databases/xbase/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			xbase
-version			2.0.0
+version			3.1.2
 categories		databases devel
 platforms		darwin
 maintainers		nomaintainer
@@ -18,11 +18,16 @@ long_description	Xbase is an XBase compatible C++ class library. It \
 
 homepage		http://linux.techass.com/projects/xdb/
 master_sites		sourceforge:xdb
-checksums		md5 9b29362031716a12491beb9f8cc882f2
+distname        ${name}64-${version}
+checksums       md5     7f3a727c142b4339faa781e1f6d5871c \
+                sha1    5bd433a4f748a6fa1a7855b6a2325483d4ee7206 \
+                rmd160  8f2a16fcecd6098b7b3ca47354e33a387a7dc1d9
 
-configure.args	--host=powerpc-apple-freebsd
+patchfiles      patch-xbase64-cpp.diff \
+                patch-xblock-cpp.diff \
+                patch-xbtypes-h.diff
 
-platform i386 {
-	configure.args-delete	--host=powerpc-apple-freebsd
-	configure.args-append	--host=i686-apple-freebsd
-}
+configure.args-append --without-xbase-locking
+
+use_parallel_build  no
+
