arm-none-linux-gnueabi-binutils: disable use of -Werror, set build/host type correctly
git-svn-id: https://svn.macports.org/repository/macports/trunk@72090 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/cross/arm-none-linux-gnueabi-binutils/Portfile
+++ b/dports/cross/arm-none-linux-gnueabi-binutils/Portfile
@@ -36,7 +36,12 @@ pre-configure   	{ system "cd ${workpath} && mkdir -p build"}
 configure.dir   	${workpath}/build
 configure.cmd   	${worksrcpath}/configure
 configure.args  	--infodir='${prefix}/share/info' --target=${crossgcc-target} \
-			--program-prefix=${crossgcc-target}- --mandir='${prefix}/share/man' --with-sysroots
+			--program-prefix=${crossgcc-target}- --mandir='${prefix}/share/man' --with-sysroots \
+			--disable-werror
+if {${os.platform} == "darwin" && ($build_arch == "x86_64" || $build_arch == "ppc64")} {
+    configure.args-append --build=${build_arch}-apple-darwin${os.version} \
+                          --host=${build_arch}-apple-darwin${os.version}
+}
 build.dir       	${workpath}/build
 					
 # We don't want the etc module.
