--- a/dports/cross/arm-none-linux-gnueabi-gcc/Portfile
+++ b/dports/cross/arm-none-linux-gnueabi-gcc/Portfile
@@ -79,6 +79,15 @@ configure.args  --infodir='${prefix}/share/info' \
 				--enable-interwork \
 				--with-gxx-include-dir=${prefix}/${crossgcc-target}/include/c++/${version}/ \
 				${default-languages}
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
+if {${os.platform} == "darwin" && ($build_arch == "x86_64" || $build_arch == "ppc64")} {
+    configure.args-append --build=${build_arch}-apple-darwin${os.version} \
+                          --host=${build_arch}-apple-darwin${os.version}
+}
+
 
 build.dir       ${workpath}/build
 
