jam: update FTP URL (#17459)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72092 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/jam/Portfile
+++ b/dports/devel/jam/Portfile
@@ -18,7 +18,7 @@ homepage			http://www.perforce.com/jam/jam.html
 distfiles			${name}-${version}.tar
 # avoid md5 mismatches.
 dist_subdir			${name}/${version}
-master_sites		ftp://ftp.perforce.com/pub/jam/ \
+master_sites		ftp://ftp.perforce.com/jam/ \
 					"http://public.perforce.com:8080/@md=d&cd=//public/jam/&ra=s&c=lAF@//public/jam/"
 checksums			md5 c7eb7719d8523c0f819116479492d367 \
 					sha1 421c1b308c3c3dc4c95c0640078416af2195d841 \
@@ -70,5 +70,5 @@ variant debug {
 }
 
 livecheck.type	md5
-livecheck.url	ftp://ftp.perforce.com/pub/jam/
+livecheck.url	ftp://ftp.perforce.com/jam/
 livecheck.md5	37e6a5b6516a680c7178b72021d3b706
