shared-mime-info: update to version 0.80, dependencies.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72094 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/shared-mime-info/Portfile
+++ b/dports/devel/shared-mime-info/Portfile
@@ -4,7 +4,7 @@
 PortSystem      1.0
 
 name            shared-mime-info
-version         0.71
+version         0.80
 maintainers     nomaintainer
 categories      devel
 platforms       darwin
@@ -18,9 +18,9 @@ homepage        http://freedesktop.org/wiki/Software/shared-mime-info
 master_sites    http://people.freedesktop.org/~hadess/
 use_bzip2       yes
 
-checksums           md5     0a90508234d415f761a79fbffdff74f4 \
-                    sha1    6f3d3379662857646b0c5b95d5d26e47c0b6250a \
-                    rmd160  4b228ce926c60e11afacc8804772f423d9b73158
+checksums       md5     eb8d24a6a80888849c9db7f30232ba6a \
+                sha1    c4ee2875c23a383d6bb6713159f5aaf529445003 \
+                rmd160  baaab0ca2be557521fe91e84ea9683103b9e6974
 
 depends_build   port:pkgconfig \
                 port:intltool
@@ -28,8 +28,7 @@ depends_build   port:pkgconfig \
 configure.env-append  INTLTOOL_PERL=${prefix}/bin/perl
 
 depends_lib     path:lib/pkgconfig/glib-2.0.pc:glib2 \
-                port:libxml2 \
-                port:zlib
+                port:libxml2
 
 configure.args  --disable-update-mimedb
 
