gtk-engines2: update to version 2.20.2, dependencies, +lua variant to enable experimental Lua engine.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72095 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/gtk-engines2/Portfile
+++ b/dports/x11/gtk-engines2/Portfile
@@ -6,7 +6,7 @@ PortSystem      1.0
 name            gtk-engines2
 set my_name     gtk-engines
 epoch           1
-version         2.20.1
+version         2.20.2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      x11
 maintainers     nomaintainer
@@ -23,21 +23,21 @@ master_sites    gnome:sources/$my_name/$branch/
 distname        $my_name-$version
 use_bzip2       yes
 
-checksums       md5     666de7fcdb775cd90dd95e1b20860b5a \
-                sha1    908d24ae48e70a0ce2f047ba9f494f35153e3982 \
-                rmd160  336465821ded77e69d9cafe2cd07f3417dd97dc5
+checksums       md5     5deb287bc6075dc21812130604c7dc4f \
+                sha1    574c7577d70eaacecd2ffa14e288ef88fdcb6c2a \
+                rmd160  941b71cd2346a349d89f68962c2ce28e3520297c
 
-depends_build \
-    port:intltool
+depends_build   port:intltool
 
-depends_lib \
-    port:gettext \
-    port:libiconv \
-    port:gtk2
+depends_lib     port:gtk2
 
 configure.args  --enable-animation
 
-use_parallel_build  yes
+variant lua description {Enable EXPERIMENTAL lua script driven engine} {
+        depends_lib-append    port:lua
+        configure.args-append --enable-lua \
+                              --with-system-lua
+}
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/$my_name/$branch/
