libgtop: ensure that group and permissions for libgtop_server2 are set as the developers intended.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72096 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgtop/Portfile
+++ b/dports/gnome/libgtop/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		libgtop
 version		2.28.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 
 description	A library for portably obtaining information about processes
@@ -31,7 +32,8 @@ depends_lib     path:lib/pkgconfig/glib-2.0.pc:glib2
 
 use_bzip2 	yes
 
-patchfiles      patch-sysdeps__darwin__proclist.c.diff
+patchfiles      patch-sysdeps__darwin__proclist.c.diff \
+                patch-configure.diff
 
 configure.args	--x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib
