libgnomeui: disable 'libX11 not found' configure error when building +no_x11, libx11 not needed here, closes #26700.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72097 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/libgnomeui/Portfile
+++ b/dports/gnome/libgnomeui/Portfile
@@ -35,7 +35,8 @@ configure.args  --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib
 
 variant no_x11 {
-	depends_lib-delete      port:xorg-libsm
+	patchfiles-append       patch-configure.diff
+        depends_lib-delete      port:xorg-libsm
         configure.args-delete   --x-includes=${prefix}/include \
                                 --x-libraries=${prefix}/lib
         configure.args-append   --without-x
