--- a/dports/lang/python26/Portfile
+++ b/dports/lang/python26/Portfile
@@ -9,7 +9,7 @@ set major               [lindex [split $version .] 0]
 set branch              [join [lrange [split ${version} .] 0 1] .]
 categories              lang
 platforms               darwin
-maintainers             mcalhoun
+maintainers             mcalhoun openmaintainer
 
 description             An interpreted, object-oriented programming language
 long_description        Python is an interpreted, interactive, object-oriented \
