libsdl_mixer: fix some universal and non-default-build_arch issues; see #26706
git-svn-id: https://svn.macports.org/repository/macports/trunk@72099 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libsdl_mixer/Portfile
+++ b/dports/audio/libsdl_mixer/Portfile
@@ -28,6 +28,13 @@ depends_lib     path:lib/pkgconfig/sdl.pc:libsdl \
                 port:libvorbis \
                 port:libogg
 
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+configure.cc    ${configure.cc} ${archflags}
+
 configure.args  --with-sdl-prefix=${prefix} \
                 --disable-sdltest \
                 --with-smpeg-prefix=${prefix} \
