--- a/dports/emulators/minivmac-devel/Portfile
+++ b/dports/emulators/minivmac-devel/Portfile
@@ -6,8 +6,8 @@ PortSystem              1.0
 name                    minivmac-devel
 conflicts               minivmac
 set my_name             minivmac
-epoch                   1
-version                 3.3-20100804
+epoch                   2
+version                 3.2.1
 set my_version          [strsed ${version} {g/^.*-20//}]
 categories              emulators aqua
 maintainers             ryandesign
@@ -65,9 +65,9 @@ extract.only            ${my_src_distfile} \
                         ${my_clipin_distfile}
 
 checksums               ${my_src_distfile} \
-                        md5     e3a4f5ef37c7435f30f625899f4823c0 \
-                        sha1    9c6928bd6bb221a20eb397a9ceaddceb8df49245 \
-                        rmd160  2c5952c71c2362208ed090226ef38157b2557393 \
+                        md5     0a46f8f03533900ebe38a2154e4b11bc \
+                        sha1    aafa5765b6ef37abb61915fff32c7e97db8b7f40 \
+                        rmd160  7ccb7bbb0e6356d2c26a468b0fa6c8041a08232a \
                         ${my_bootstrap_distfile} \
                         md5     65fa9b7fb19a24dc6c9e711387c1bc30 \
                         sha1    4ad44559e75894d45e91ae62cc7ddb420062f968 \
