xdpyinfo: Bump to 1.2.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@72103 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xdpyinfo/Portfile
+++ b/dports/x11/xdpyinfo/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem          1.0
 name                xdpyinfo
-version             1.1.0
+version             1.2.0
 categories          x11
 maintainers         jeremyhu openmaintainer
 description         Display information utility for X11
@@ -18,9 +18,9 @@ homepage            http://www.x.org/
 master_sites        http://xorg.freedesktop.org/archive/individual/app/
 use_bzip2           yes
 
-checksums           md5     d1d516610316138105cd07064b257c5c \
-                    sha1    01971f007048a46a4a31a69c661bc3a378de60f0 \
-                    rmd160  9e206cf6343ada585d1daa3e41466a569302b7d4
+checksums           md5     c52fda7bbc80e74b7839f29298cb1d77 \
+                    sha1    5d53cd31afd40bdc4575b5347f2cda67f135f5f2 \
+                    rmd160  9b9360926d8bd9b9a22ccb143c27415d43683ccc
 
 depends_build       port:pkgconfig
 
@@ -30,7 +30,7 @@ depends_lib         port:xorg-libXinerama \
                     port:xorg-libXxf86vm \
                     port:xorg-libdmx
 
-configure.args      --without-xprint --without-xf86misc --without-dga
+configure.args      --without-xf86misc --without-dga
 
 livecheck.type      regex
 livecheck.regex     ${name}-(\[\\d.\]+)${extract.suffix}
