swftools' configure script does not recognize --disable-dependency-tracking
git-svn-id: https://svn.macports.org/repository/macports/trunk@72104 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/swftools/Portfile
+++ b/dports/graphics/swftools/Portfile
@@ -29,6 +29,7 @@ configure.python    ${prefix}/bin/python2.6
 # Make sure to not link against OpenGL libs from the mesa port, in case it
 # is installed
 configure.env       ac_cv_lib_GL_glBegin=no
+configure.universal_args-delete --disable-dependency-tracking
 
 post-destroot {
    set swfs_dir ${prefix}/share/swftools/swfs
