--- a/dports/graphics/swftools/Portfile
+++ b/dports/graphics/swftools/Portfile
@@ -20,10 +20,7 @@ checksums           md5     72dc4a7bf5cdf98c28f9cf9b1d8f5d7a \
 depends_lib         port:jpeg port:openjpeg port:freetype port:lame \
                     path:include/gif_lib.h:giflib port:python26
 
-#patchfiles          patch-Makefile.common.in.diff
-post-patch {
-   reinplace "s|@prefix@|\$(DESTDIR)/@prefix@|" ${worksrcpath}/Makefile.common.in
-}
+patchfiles          patch-Makefile.common.in.diff
 
 configure.python    ${prefix}/bin/python2.6
 # Make sure to not link against OpenGL libs from the mesa port, in case it
