swftools: revert part of r56303: add -I${prefix}/include/lame to CPPFLAGS again so LAME is found; see http://lists.macosforge.org/pipermail/macports-users/2010-October/022123.html
git-svn-id: https://svn.macports.org/repository/macports/trunk@72106 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/swftools/Portfile
+++ b/dports/graphics/swftools/Portfile
@@ -3,6 +3,7 @@
 PortSystem          1.0
 name                swftools
 version             0.9.1
+revision            1
 categories          graphics
 maintainers         nomaintainer
 description         SWF manipulation and generation tools
@@ -23,9 +24,14 @@ depends_lib         port:jpeg port:openjpeg port:freetype port:lame \
 patchfiles          patch-Makefile.common.in.diff
 
 configure.python    ${prefix}/bin/python2.6
+
 # Make sure to not link against OpenGL libs from the mesa port, in case it
 # is installed
 configure.env       ac_cv_lib_GL_glBegin=no
+
+# Make sure LAME gets found during configure step
+configure.cppflags-append   -I${prefix}/include/lame
+
 configure.universal_args-delete --disable-dependency-tracking
 
 post-destroot {
