--- a/dports/devel/glib2-devel/Portfile
+++ b/dports/devel/glib2-devel/Portfile
@@ -40,7 +40,8 @@ patchfiles                  patch-configure.ac.diff \
                             patch-gi18n.h.diff \
                             patch-gio_xdgmime_xdgmime.c.diff
 
-depends_build               port:pkgconfig
+depends_build               port:pkgconfig \
+                            port:dbus
 
 depends_lib                 port:gettext \
                             port:libiconv \
@@ -50,7 +51,8 @@ depends_lib                 port:gettext \
 
 archcheck.files             lib/libintl.dylib \
                             lib/libiconv.dylib \
-                            lib/libz.dylib
+                            lib/libz.dylib \
+                            lib/libdbus-1.dylib
 
 use_autoconf                yes
 
