editors/MacVim: Update to version 7.3.snapshot54
git-svn-id: https://svn.macports.org/repository/macports/trunk@72108 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/MacVim/Portfile
+++ b/dports/editors/MacVim/Portfile
@@ -4,8 +4,8 @@ PortSystem          1.0
 
 name                MacVim
 set vim_version     7.3
-set snapshot        53
-set gitcommit       v${vim_version}-${snapshot}
+set snapshot        54
+set gitcommit       snapshot-${snapshot}
 version             ${vim_version}.snapshot${snapshot}
 categories          editors
 platforms           darwin
@@ -17,9 +17,9 @@ long_description \
 homepage            http://code.google.com/p/macvim
 
 master_sites        http://github.com/b4winckler/macvim/zipball/${gitcommit}
-checksums           md5     326e83b3bd265d124c99193ae0c1b7cf \
-                    sha1    914a370884e84e3e01686d88af3fa745a34b446b \
-                    rmd160  ae4c294559dfc2358f8052121c56f3ca2afe432e
+checksums           md5     6d48edaaa9992a40896573fbc2f69408 \
+                    sha1    d81b48c9cf2d2e3ba5ec9909b2061a73126da5a4 \
+                    rmd160  f16d3f2806bc82ab602454ad27cfe02e4b591533
 use_zip             yes
 worksrcdir          ${name}
 
