--- a/dports/devel/tcl-tls/Portfile
+++ b/dports/devel/tcl-tls/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name	   tcl-tls
 version	   1.6
+revision	1
 categories	devel
 platforms	darwin
 maintainers	jmpp openmaintainer
@@ -23,5 +24,6 @@ depends_lib	port:openssl
 
 worksrcdir	tls${version}
 
-configure.args	--with-ssl-dir=${prefix}
+configure.args	--exec-prefix=${prefix} \
+		--with-ssl-dir=${prefix}
 
