py*-pyzmq: Fix dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@72114 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-pyzmq/Portfile
+++ b/dports/python/py26-pyzmq/Portfile
@@ -19,4 +19,4 @@ checksums           md5     f70dfbf2b7d67eed011aa63674ee0937 \
                     sha1    3cd58e20a2d0cdcd85d6772f484f74b2173639cb \
                     rmd160  b8c05353703f7de5f598191a8e82265a8a860ab7
 
-depends             port:zeromq
+depends_lib-append  port:zeromq
