--- a/dports/python/py26-bzr-git/Portfile
+++ b/dports/python/py26-bzr-git/Portfile
@@ -6,7 +6,7 @@ PortGroup         python26 1.0
 name              py26-bzr-git
 version           0.5.2
 categories        python devel
-maintainers       openmaintainer
+maintainers       nomaintainer
 platforms         darwin
 description       A plugin for bzr to work with git trees.
 long_description  ${description} All operations except \"push\" are supported.
