port upgrade: openbox 3.4.11.2 (#26715)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72117 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/openbox/Portfile
+++ b/dports/x11/openbox/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name		openbox
-version		3.4.5
-revision        1
+version		3.4.11.2
 categories	x11
 maintainers	afb openmaintainer
 platforms	darwin freebsd linux
@@ -13,10 +12,11 @@ description	A highly configurable and standards-compliant window manager
 long_description	Openbox is a minimalistic, highly configurable, next \
 			generation window manager with extensive standards support.
 
-homepage	http://icculus.org/openbox/
-master_sites    http://icculus.org/openbox/releases/
-checksums	md5 06e007ef96ab3f7f4bbc34c4464af6c2
-post-extract	{ system "chmod +x ${worksrcpath}/install-sh" }
+homepage	http://openbox.org/
+master_sites	http://openbox.org/dist/openbox/
+checksums	md5 30e669134fa81df810fe7d1dc59cd931 \
+		sha1 e9eb2d91b3aea54158d0ce38694896e5669a7610 \
+		rmd160 d1e2c0d48986dfdf916b374095c20f354f6c663c
 
 depends_build \
 	port:pkgconfig
