--- a/dports/devel/gettext-lint/Portfile
+++ b/dports/devel/gettext-lint/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name		gettext-lint
 version		0.4
+revision	1
 categories	devel
 platforms	darwin
 maintainers	afb openmaintainer
@@ -17,9 +18,12 @@ homepage	http://gettext-lint.sourceforge.net/
 master_sites	sourceforge:gettext-lint
 checksums	md5 9db81f7c3df06147ba27ee331222e057
 
-depends_lib	port:automake port:autoconf port:python25
+depends_lib	port:automake port:autoconf port:python25 bin:dos2unix:dos2unix
+
+patchfiles	patch-python.diff
 
 post-extract	{ delete ${worksrcpath}/INSTALL ${worksrcpath}/install-sh ${worksrcpath}/missing }
+post-patch	{ system "dos2unix -k ${worksrcpath}/src/POFileClean.in" }
 pre-configure	{ system "cd ${worksrcpath} && aclocal && automake --add-missing --copy && autoconf" }
 
 configure.env	PYTHON=${prefix}/bin/python2.5
