reinteract: fix +x11 shebang (#26328)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72119 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/reinteract/Portfile
+++ b/dports/devel/reinteract/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name			reinteract
 version			0.4.1
+revision		1
 categories		devel
 platforms		darwin
 maintainers		afb openmaintainer
@@ -20,6 +21,10 @@ checksums		md5 62768668fc741d9515312bf9cbde145d \
 			rmd160 a72f2b394540676f2ab489d95ff6829f52caa9cd
 
 depends_lib		port:python25 port:py25-gtk
+
+patchfiles		patch-python.diff
+
+configure.env		PYTHON=${prefix}/bin/python2.5
 
 variant quartz conflicts x11 description {Enable Quartz rendering} {
     build.target	build-local-app
