devel/bzr-explorer: Update to version 1.1.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72121 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bzr-explorer/Portfile
+++ b/dports/devel/bzr-explorer/Portfile
@@ -4,7 +4,7 @@ PortSystem    1.0
 PortGroup     python26 1.0
 
 name          bzr-explorer
-version       1.1.0
+version       1.1.1
 epoch         1
 set branch    [join [lrange [split ${version} .] 0 1] .]
 categories    devel python
@@ -19,11 +19,11 @@ long_description \
     functionality. Alternatively, the applets from the bzr-gtk plug-in can be \
     used if it is installed.
 homepage      http://doc.bazaar.canonical.com/explorer/en/
-master_sites  https://launchpad.net/${name}/${branch}/${branch}/+download/
+master_sites  https://launchpad.net/${name}/${branch}/${version}/+download/
 
-checksums     md5     423099eb4ee54c1fc2b3b37a2d7469ce \
-              sha1    7d7c61e82f696c9f531880db107c594bcf96225b \
-              rmd160  91bd6f32a5ffc91a84cad44c7e0fb81781c7db19
+checksums     md5     7d0ec1ca8625aa52a1c0ec19e80c0a9b \
+              sha1    8f376d6bffeef6fbe5bde36708a653b80fb65a1d \
+              rmd160  a73755f26328110acd6c6771f4ba473d578fee73
 
 depends_lib-append  port:qbzr
 
