telepathy-glib: enable GObject introspection, vala bindings, required by libfolks, increment revision.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72126 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/comms/telepathy-glib/Portfile
+++ b/dports/comms/telepathy-glib/Portfile
@@ -5,6 +5,8 @@ PortSystem 1.0
 
 name            telepathy-glib
 version         0.12.0
+revision        1
+# version 0.13.x is unstable, do not upgrade until 0.14
 description     The ${name} component of Telepathy - a Flexible Communications Framework.
 long_description \
                 The ${name} component of Telepathy - a Flexible Communications Framework. \
@@ -25,6 +27,7 @@ checksums       md5     97126148b42ac4ce5db1561156180a3e \
 depends_build   port:pkgconfig \
                 port:gnome-doc-utils \
                 port:gtk-doc \
+                port:vala \
                 port:python26
 
 depends_lib     port:dbus-glib \
@@ -33,6 +36,9 @@ depends_lib     port:dbus-glib \
 patchfiles      patch-configure.diff
 
 configure.python ${prefix}/bin/python2.6
+
+configure.args  --enable-vala-bindings \
+                --enable-introspection=yes
 
 livecheck.type  regex
 livecheck.url   ${master_sites}
