bibtex2html: add hevea dependency; see #26687 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72128 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/bibtex2html/Portfile
+++ b/dports/textproc/bibtex2html/Portfile
@@ -18,7 +18,7 @@ checksums	sha1 ce447520fde0a66bbbda0db247f06afb5e53907c \
 		md5  cd63fcb95043a3677377b87f30bef7d4
 patchfiles       patch-aux2bib.1.diff
 configure.args   --mandir=${destroot}${prefix}/share/man
-depends_build    bin:ocamlc:ocaml
+depends_build    port:ocaml port:hevea
 depends_run      bin:bibtex:texlive
 destroot.target  install
 destroot.destdir prefix=${destroot}${prefix}
