--- a/dports/lang/rhino/Portfile
+++ b/dports/lang/rhino/Portfile
@@ -5,10 +5,13 @@ PortSystem          1.0
 
 name                rhino
 version             1.7R2
+revision            1
 license             MPL-1.1 GPL-2.0
 categories          lang java devel
 platforms           darwin freebsd openbsd
 homepage            http://www.mozilla.org/rhino/
+supported_archs     noarch
+
 maintainers         ouarz.net:franck.cassedanne
 description         Mozilla JavaScript engine for Java
 
