simutrans: update homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@72131 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/simutrans/Portfile
+++ b/dports/games/simutrans/Portfile
@@ -21,7 +21,7 @@ long_description    Simutrans Transport Simulator (short: Simutrans) is a \
                     http://simutrans.sourceforge.net/ufcs.htm) and put it \
                     into \"${prefix}/share/simutrans\".
 
-homepage            http://simutrans.sourceforge.net/
+homepage            http://www.simutrans.com/
 master_sites        sourceforge
 use_zip             yes
 set source          ${name}-src-${version}${extract.suffix}
