simutrans: ensure we're UsingTheRightCompiler, and support non-default-build_arch builds
git-svn-id: https://svn.macports.org/repository/macports/trunk@72132 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/simutrans/Portfile
+++ b/dports/games/simutrans/Portfile
@@ -60,6 +60,9 @@ post-patch {
 
 use_configure       no
 
+build.args          CC="${configure.cc} ${configure.cc_archflags}" \
+                    CXX="${configure.cxx} ${configure.cxx_archflags}"
+
 destroot {
     # Install the simutrans data into share/simutrans.
     copy ${worksrcpath}/simutrans ${destroot}${prefix}/share
