simutrans: simplify patch and reinplace for enabling music
git-svn-id: https://svn.macports.org/repository/macports/trunk@72133 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/simutrans/Portfile
+++ b/dports/games/simutrans/Portfile
@@ -49,13 +49,6 @@ patchfiles          patch-config.default.diff \
 
 post-patch {
     reinplace "s|__PREFIX__|${prefix}|g" ${worksrcpath}/Makefile
-
-    # If music should not be enabled then don't use the mixer_sdl backend
-    # which is only used with music. This may speed up the game.
-    if {![variant_isset enable_music]} {
-        reinplace "s|BACKEND = mixer_sdl|#BACKEND = mixer_sdl|g" \
-            ${worksrcpath}/config.default
-    }
 }
 
 use_configure       no
@@ -80,4 +73,8 @@ destroot {
 variant enable_music description {Allows to listen to simutrans own music\
                                   while playing. May reduce speed.} {
     depends_lib-append  port:libsdl_mixer
+    post-patch {
+        reinplace "s|#BACKEND = mixer_sdl|BACKEND = mixer_sdl|g" \
+            ${worksrcpath}/config.default
+    }
 }
