slib-guile, slib-guile16: noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@72136 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/slib-guile/Portfile
+++ b/dports/devel/slib-guile/Portfile
@@ -7,6 +7,7 @@ revision	2
 categories	devel
 maintainers	nomaintainer
 platforms	darwin
+supported_archs	noarch
 description	Wrapper port to properly set up slib and guile together
 long_description	Create two symbolic links and a catalog file \
 			so that guile can find the slib library files.
