--- a/dports/devel/slib-guile16/Portfile
+++ b/dports/devel/slib-guile16/Portfile
@@ -7,6 +7,7 @@ revision	2
 categories	devel
 maintainers	nomaintainer
 platforms	darwin
+supported_archs	noarch
 description	Wrapper port to properly set up slib and guile16 together
 long_description	Create two symbolic links and a catalog file \
 			so that guile16 can find the slib library files.
