guile: remove patch that seems to break slib-guile (#18904), set --build for configure
git-svn-id: https://svn.macports.org/repository/macports/trunk@72138 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/guile/Portfile
+++ b/dports/lang/guile/Portfile
@@ -6,6 +6,7 @@ PortGroup	muniversal 1.0
 
 name		guile
 version		1.8.7
+revision	1
 categories	lang
 maintainers	nomaintainer
 platforms	darwin
@@ -42,7 +43,6 @@ checksums       md5     991b5b3efcbbc3f7507d05bc42f80a5e \
                 rmd160  3ccd581cff4ad743fc1328597bd8cb241cbd3fd6
 
 patchfiles	patch-srfi-60.c.diff \
-		patch-slib.scm.diff \
 		patch-libguile-fports.c.diff
 
 depends_lib	port:readline \
@@ -56,6 +56,10 @@ configure.args	CPPFLAGS="-I${prefix}/include"		\
 		--infodir="${prefix}/share/info"	\
 		--mandir="${prefix}/share/man"		\
 		--enable-regex
+
+if {${os.platform} == "darwin" && ($build_arch == "x86_64" || $build_arch == "ppc64")} {
+    configure.args-append --build=${build_arch}-apple-darwin${os.version}
+}
 
 #post-destroot	{
 #		  file delete ${destroot}${prefix}/share/${name}/1.6/ice-9/and-let\*.scm
