slib: update to 3b2
git-svn-id: https://svn.macports.org/repository/macports/trunk@72139 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/slib/Portfile
+++ b/dports/devel/slib/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name                slib
-version             3b1
+version             3b2
 categories          devel lang scheme
 platforms           darwin
 maintainers         nomaintainer
@@ -18,10 +18,9 @@ long_description    SLIB is a portable library for the programming \
                     implementation, user, or directory.
 homepage            http://www.swiss.ai.mit.edu/~jaffer/SLIB.html
 master_sites        http://groups.csail.mit.edu/mac/ftpdir/scm/ \
-                    macports:slib
-distfiles           ${name}-${version}.zip
-use_zip             yes
-checksums           sha1 e3342e4cb1e728bb3133449654b10b538ed8b043
+                    http://groups.csail.mit.edu/mac/ftpdir/scm/OLD/
+checksums           sha1 fced3cc9ca30bba21da303bfa520b615386852bb \
+                    rmd160 a053dcad6e7a1bea1c0079107f4664df1434270d
 worksrcdir          ${name}
 patchfiles          patch-Makefile
 use_configure       no
