slib-guile: clean up, use tcl commands instead of shelling out where possible
git-svn-id: https://svn.macports.org/repository/macports/trunk@72140 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/slib-guile/Portfile
+++ b/dports/devel/slib-guile/Portfile
@@ -1,6 +1,7 @@
 # $Id$
 
 PortSystem 1.0
+
 name		slib-guile
 version		1.0
 revision	2
@@ -19,10 +20,10 @@ use_configure	no
 build {}
 
 destroot {
-	system "mkdir -p ${workpath}/destroot${prefix}/share/guile"
-	system "mkdir -p ${workpath}/destroot${prefix}/share/guile/`guile-config info guileversion | cut -d . -f 1-2`"
-	system "ln -s ${prefix}/lib/slib ${workpath}/destroot${prefix}/share/guile/`guile-config info guileversion | cut -d . -f 1-2`/slib"
-	file link -s ${workpath}/destroot${prefix}/share/guile/slib ${prefix}/lib/slib
+    set guileversion [exec ${prefix}/bin/guile-config info guileversion | cut -d . -f 1-2]
+	file mkdir "${destroot}${prefix}/share/guile/${guileversion}"
+	ln -s "${prefix}/lib/slib" "${destroot}${prefix}/share/guile/${guileversion}/slib"
+	ln -s "${prefix}/lib/slib" "${destroot}${prefix}/share/guile/slib"
 }
 
 post-activate {
