sbt: fix quoting of arguments in wrapper script, and avoid an extract error; see #26725
git-svn-id: https://svn.macports.org/repository/macports/trunk@72141 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/sbt/Portfile
+++ b/dports/devel/sbt/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                sbt
 version             0.7.4
+revision            1
 categories          devel java
 maintainers         jon.buffington.name:me
 platforms           darwin
@@ -32,6 +33,7 @@ set wrapper         sbt.sh
 
 extract.suffix      .jar
 extract.mkdir       yes
+extract.only
 pre-extract {
     file copy ${filespath}/${wrapper} ${worksrcpath}
 }
