activewire: update description
git-svn-id: https://svn.macports.org/repository/macports/trunk@72142 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/activewire/Portfile
+++ b/dports/devel/activewire/Portfile
@@ -7,8 +7,13 @@ name                activewire
 version             4.0
 categories          devel
 maintainers         nomaintainer
-description         This is an independent project focusing on the development of drivers for the ActiveWire board on osx. (REALbasic Plugin not included)
-long_description    $description
+
+description         Driver for the ActiveWire board
+
+long_description    An independent project focusing on the development \
+                    of drivers for the ActiveWire board on Mac OS X. \
+                    The REALbasic Plugin not included.
+
 homepage            http://activewire-osx.sourceforge.net/
 platforms           darwin
 master_sites        sourceforge:activewire-osx
