--- a/dports/devel/activewire/Portfile
+++ b/dports/devel/activewire/Portfile
@@ -19,14 +19,13 @@ platforms           darwin
 master_sites        sourceforge:activewire-osx
 
 distname            aw_${version}
-extract.suffix      .dmg
 
 checksums           md5     857800a7187ebf29281438b231100c5e \
                     sha1    6ea56df40235f28d63bc8fd1bb371cf69a5d7622 \
                     rmd160  11740b6f835a2ebfbaea14f12dcec921a8a9a03b
 
 worksrcdir          ${distname}/Source/
-use_bzip2           no
+use_dmg             yes
 xcode.configuration Default
 default_variants    +doc \
                     +dev
@@ -39,19 +38,6 @@ variant doc description {Install documentation} {}
 variant dev description {Install header files for development} {}
 
 # variant realbasic description {Installs the realbasic plugin} {}
-
-extract {
-  file mkdir /tmp/${distname}
-  system "hdiutil attach ${distpath}/${distname}.dmg -private -nobrowse -mountpoint /tmp/${distname}"
-  
-  file mkdir ${workpath}/${distname}
-  file copy /tmp/${distname}/Documentation ${workpath}/${distname}
-  file copy /tmp/${distname}/Examples ${workpath}/${distname}
-  file copy /tmp/${distname}/Source ${workpath}/${distname}
-  file copy /tmp/${distname}/LICENSE.txt ${workpath}/${distname}
-  
-  system "hdiutil detach /tmp/${distname}"
-}
 
 pre-configure {  
   foreach {i} {libaw awdriver awconfig} {
