--- a/dports/devel/activewire/Portfile
+++ b/dports/devel/activewire/Portfile
@@ -33,12 +33,12 @@ default_variants    +doc \
 
 # Doesn't build with 10.5
 macosx_deployment_target 10.5
-variant awdriver description {Installs the ActiveWire driver} {}
-variant awconfig description {Installs the awconfig utility} {}
+variant awdriver description {Install ActiveWire driver} {}
+variant awconfig description {Install awconfig utility} {}
 variant doc description {Install documentation} {}
 variant dev description {Install header files for development} {}
 
-# variant realbasic description {Installs the realbasic plugin} {}
+# variant realbasic description {Install REALbasic plugin} {}
 
 pre-configure {
     foreach i {libaw awdriver awconfig} {
