--- a/dports/devel/slib/Portfile
+++ b/dports/devel/slib/Portfile
@@ -6,6 +6,7 @@ name                slib
 version             3b2
 categories          devel lang scheme
 platforms           darwin
+supported_archs     noarch
 maintainers         nomaintainer
 description         A portable scheme library
 long_description    SLIB is a portable library for the programming \
