activewire: fix build errors on 10.6; see #25949
git-svn-id: https://svn.macports.org/repository/macports/trunk@72148 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/activewire/Portfile
+++ b/dports/devel/activewire/Portfile
@@ -31,8 +31,6 @@ xcode.configuration Default
 default_variants    +doc \
                     +dev
 
-# Doesn't build with 10.5
-macosx_deployment_target 10.5
 variant awdriver description {Install ActiveWire driver} {}
 variant awconfig description {Install awconfig utility} {}
 variant doc description {Install documentation} {}
@@ -40,11 +38,17 @@ variant dev description {Install header files for development} {}
 
 # variant realbasic description {Install REALbasic plugin} {}
 
+patchfiles          patch-Shared-libCdsaCrypt-libCdsaCrypt.cpp.diff
+
 pre-configure {
     foreach i {libaw awdriver awconfig} {
         reinplace "s|/usr/local|${prefix}|g" "${worksrcpath}/$i/$i.xcodeproj/project.pbxproj"
         reinplace "s|/usr/share/man/man1/|${prefix}/include|g" "${worksrcpath}/$i/$i.xcodeproj/project.pbxproj"
-        reinplace "s|MacOSX10.4u.sdk|MacOSX10.5.sdk|g" "${worksrcpath}/$i/$i.xcodeproj/project.pbxproj"
+        if {${configure.sdkroot} == ""} {
+            reinplace "\\|/Developer/SDKs/MacOSX10.4u.sdk|d" "${worksrcpath}/$i/$i.xcodeproj/project.pbxproj"
+        } else {
+            reinplace "s|/Developer/SDKs/MacOSX10.4u.sdk|${configure.sdkroot}|g" "${worksrcpath}/$i/$i.xcodeproj/project.pbxproj"
+        }
     }
 }
 
