activewire: fix build errors on 10.5; see #25949
git-svn-id: https://svn.macports.org/repository/macports/trunk@72150 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/activewire/Portfile
+++ b/dports/devel/activewire/Portfile
@@ -38,7 +38,8 @@ variant dev description {Install header files for development} {}
 
 # variant realbasic description {Install REALbasic plugin} {}
 
-patchfiles          patch-Shared-libCdsaCrypt-libCdsaCrypt.cpp.diff
+patchfiles          patch-Shared-aw_sock.h.diff \
+                    patch-Shared-libCdsaCrypt-libCdsaCrypt.cpp.diff
 
 pre-configure {
     foreach i {libaw awdriver awconfig} {
