pure: update to 0.44
git-svn-id: https://svn.macports.org/repository/macports/trunk@72151 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/pure/Portfile
+++ b/dports/lang/pure/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 
 name                    pure
 conflicts               pure-devel
-version                 0.43
+version                 0.44
 categories              lang
 platforms               darwin
 maintainers             ryandesign
@@ -29,9 +29,8 @@ long_description \
     The libraries are licensed under LGPLv3, the interpreter is GPLv3, and \
     the examples are BSD-licensed.
 
-checksums               md5     f15b77eb6bb15e78c69e94a4ac1d9bd9 \
-                        sha1    ce74deb19d2e45e388855cf9ff6c7cd4028fb400 \
-                        rmd160  106108d803601565c3fb3dcaefcc0fce2f9b09fa
+checksums               sha1    dd7199091b254be57704ea0fff730baf8c32ab45 \
+                        rmd160  4c5c9920e5210bc6503885fc45366fe85bedf083
 
 depends_build \
     path:bin/llvm-config:llvm
