pure-devel: update to 0.44 3567
git-svn-id: https://svn.macports.org/repository/macports/trunk@72152 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/pure-devel/Portfile
+++ b/dports/lang/pure-devel/Portfile
@@ -5,12 +5,12 @@ PortSystem              1.0
 
 name                    pure-devel
 conflicts               pure
-version                 0.44-r3408
+version                 0.44-r3567
 categories              lang
 platforms               darwin
 maintainers             ryandesign
 license                 LGPLv3 GPLv3 BSD
-use_parallel_build      yes
+use_parallel_build      no
 homepage                http://pure-lang.googlecode.com/
 master_sites            ${homepage}files/
 universal_variant       no
@@ -34,8 +34,10 @@ long_description \
     The libraries are licensed under LGPLv3, the interpreter is GPLv3, and \
     the examples are BSD-licensed.
 
+use_autoreconf          yes
+
 # bison and flex aren't needed for released tarballs
-depends_build \
+depends_build-append \
     path:bin/llvm-config:llvm \
     port:bison \
     port:flex
