pure-gen: update to 0.9
git-svn-id: https://svn.macports.org/repository/macports/trunk@72153 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/pure-gen/Portfile
+++ b/dports/devel/pure-gen/Portfile
@@ -4,7 +4,7 @@
 PortSystem                      1.0
 PortGroup                       pure 1.0
 
-pure.setup                      gen 0.8
+pure.setup                      gen 0.9
 categories                      devel
 platforms                       darwin
 maintainers                     ryandesign
@@ -14,9 +14,8 @@ description                     a Pure C bindings generator
 
 long_description                ${name} is ${description}.
 
-checksums                       md5     ca7a9b9c8e5818534994edc430ca3b65 \
-                                sha1    72eabf019fc66cea4c22d259e2517eacaa4a1701 \
-                                rmd160  631b894767607ef7034a99e1bd608013cb527252
+checksums                       sha1    595770fc4632be5398731641cf9034b7d9f7633e \
+                                rmd160  ad1fb76ced3703f4c7e2fab6c169b5d768cc985d
 
 depends_build-append            path:bin/ghc:ghc \
                                 port:hs-language-c
