pure-ffi: update to 0.9
git-svn-id: https://svn.macports.org/repository/macports/trunk@72154 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/pure-ffi/Portfile
+++ b/dports/devel/pure-ffi/Portfile
@@ -4,8 +4,7 @@
 PortSystem                      1.0
 PortGroup                       pure 1.0
 
-pure.setup                      ffi 0.8
-revision                        1
+pure.setup                      ffi 0.9
 categories                      devel
 platforms                       darwin
 maintainers                     ryandesign
@@ -22,9 +21,8 @@ long_description                ${name} provides ${description}. It goes \
                                 may also be possible to call foreign \
                                 languages other than C.
 
-checksums                       md5     3dbdd586dbb69a8603bb1bc4140f9d19 \
-                                sha1    280fb011a134ba58a1106830aa5e5a2ffc71551f \
-                                rmd160  4cad207b9dbc4c4b9c5ba04a864d6b526784f44c
+checksums                       sha1    e372efb155d24cdb01c80e188c26cb6418167695 \
+                                rmd160  46f24224733bc76c029a10f9a4d9bfcb202d577a
 
 depends_build-append            port:pkgconfig
 
