pure-gtk: update to 0.7
git-svn-id: https://svn.macports.org/repository/macports/trunk@72155 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/pure-gtk/Portfile
+++ b/dports/x11/pure-gtk/Portfile
@@ -4,7 +4,7 @@
 PortSystem                      1.0
 PortGroup                       pure 1.0
 
-pure.setup                      gtk 0.6
+pure.setup                      gtk 0.7
 categories                      x11
 platforms                       darwin
 maintainers                     ryandesign
@@ -17,9 +17,8 @@ long_description                ${name} is ${description}. The bindings \
                                 include the gtk (+gdk), glib, atk, cairo and \
                                 pango libraries, each in their own Pure module
 
-checksums                       md5     de154b71c35edfbbb6c893b462e5bbe2 \
-                                sha1    ee4ec09c6d3d71b39247c9b939d2b74fb5496256 \
-                                rmd160  cab5971194f6a99d2911427c382ba5a3dde2def8
+checksums                       sha1    33541f76672028af57432e899b41d0549c65c634 \
+                                rmd160  ab6f9b4089c0e1c8d6d2399797b9f256c7c527f2
 
 depends_lib-append              path:lib/pure/ffi.dylib:pure-ffi \
                                 path:lib/pkgconfig/atk.pc:atk \
